testdata/negative/duplicate_function.rs
fn foo() {}
fn foo() {}  // Дублирующееся определение

